--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -52,10 +52,18 @@ p {
     margin: 0 auto 8rem auto;
   }
 
-  &-description {
+  &__description {
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--color-primary-darker);
+    margin-bottom: 1rem;
   }
 
   &__header {
+    font-size: 4rem;
+    line-height: 1.3;
+    font-weight: 500;
   }
 }
 
