--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,3 +1,4 @@
+// buttons
 .btn {
   display: inline-block;
   background-color: var(--color-primary);
@@ -27,5 +28,91 @@
     padding-bottom: 2px;
     cursor: pointer;
     transition: all 0.3s;
+  }
+}
+
+// Slider
+
+.slider {
+  max-width: 100rem;
+  height: 50rem;
+  margin: 0 auto;
+  position: relative;
+
+  overflow: hidden;
+
+  &__btn {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+
+    border: none;
+    background: none;
+    // background: rgba(255, 255, 255, 0.7);
+    // font-family: inherit;
+    color: #333;
+    border-radius: 50%;
+    font-size: 4rem;
+
+    &--left {
+      left: 6%;
+      transform: translate(-50%, -50%);
+    }
+
+    &--right {
+      right: 6%;
+      transform: translate(50%, -50%);
+    }
+  }
+
+  .slide {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: 50rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: transform 1s;
+
+    & > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+// dots
+.dots {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+
+  &__dot {
+    border: none;
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    box-shadow: 0 0.6rem 1.5rem rga(0, 0, 0, 0.7);
+
+    &:last-child {
+      margin: 0;
+    }
+
+    &--active {
+      background-color: #888;
+      opacity: 1;
+    }
   }
 }
