--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -1,3 +1,5 @@
+@use "breakpoints" as *;
+
 :root {
   --color-primary: #ffcb03;
   --color-secondary: #5ec576;
@@ -21,10 +23,16 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  @include breakpoint(large) {
+    font-size: 55%;
+  }
+  @include breakpoint(small) {
+    font-size: 50%;
+  }
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 300;
   color: #444;
   line-height: 1.9;
