--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -1,11 +1,22 @@
+@use 'breakpoints' as *;
+
 .features {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 4rem;
   margin: 0 12rem;
 
+  @include breakpoint(medium) {
+    grid-template-columns: 1fr;
+    margin: 0 5rem;
+  }
+  @include breakpoint(medium) {
+    margin: 0 1rem;
+  }
+
   &__img {
     width: 100%;
+    height: 100%;
   }
 
   &__feature {
@@ -13,6 +24,15 @@
     justify-self: center;
     width: 70%;
     font-size: 1.5rem;
+
+    @include breakpoint(medium) {
+      &:nth-child(3) {
+        grid-row: 4 / 5;
+      }
+
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__icon {
@@ -25,15 +45,27 @@
     border-radius: 50%;
     margin-bottom: 2rem;
 
+    @include breakpoint(large) {
+      margin: 0 auto 2rem auto;
+
+      height: 7.5rem;
+      width: 7.5rem;
+    }
+
     svg {
       height: 2.5rem;
       width: 2.5rem;
       fill: var(--color-primary);
-    }
 
-    &__header {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+      @include breakpoint(large) {
+        height: 4.5rem;
+        width: 4.5rem;
+      }
     }
+  }
+
+  &__header {
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
 }
