--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+  outline: none;
 }
 
 html {
@@ -69,13 +70,9 @@ p {
     font-size: 4rem;
     line-height: 1.3;
     font-weight: 500;
-  }
-}
 
-.btn {
-  &:hover {
-  }
-
-  &--text {
+    @include breakpoint(medium) {
+      font-size: 3rem;
+    }
   }
 }
