--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,3 +1,4 @@
+@use 'breakpoints' as *;
 // buttons
 .btn {
   display: inline-block;
@@ -10,6 +11,14 @@
   border-radius: 10rem;
   cursor: pointer;
   transition: all 0.3s;
+
+  @include breakpoint(medium) {
+    text-align: center;
+    padding: 1.25rem 1rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
+  }
 
   &:hover {
     background-color: var(--color-primary-darker);
