add media queries

--- a/src/scss/_boilerplate.scss
+++ b/src/scss/_boilerplate.scss
@@ -47,6 +47,7 @@ p {
   padding: 15rem 3rem;
   border-top: 1px solid #ddd;
   transition: transform 1s, opacity 1s;
+  overflow: hidden;
 
   &--hidden {
     opacity: 0;
