--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -54,14 +54,15 @@
     position: absolute;
     top: 50%;
     z-index: 10;
-
     border: none;
     background: none;
-    // background: rgba(255, 255, 255, 0.7);
-    // font-family: inherit;
     color: #333;
     border-radius: 50%;
     font-size: 4rem;
+
+    @include breakpoint(medium) {
+      display: none;
+    }
 
     &--left {
       left: 6%;
@@ -128,6 +129,12 @@
   box-shadow: 0 5rem 5rem rgab(0, 0, 0, 0, 3);
   z-index: 1000;
   transition: all 0.5s;
+
+  @include breakpoint(medium) {
+    padding: 1rem 2rem;
+    left: 45%;
+    top: 40%;
+  }
 
   &__header {
     font-size: 3.25rem;
