--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,10 +18,11 @@
     width: 100%;
     padding: 0 6rem;
     z-index: 100;
+    overflow: hidden;
 
-    @include breakpoint(medium) {
-      padding: 3rem 6rem;
-    }
+    // @include breakpoint(medium) {
+    //   padding: 3rem 2rem;
+    // }
 
     &__button {
       cursor: pointer;
