--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -18,6 +18,8 @@
     display: flex;
     flex-direction: column;
     font-size: 1.4rem;
+    align-items: center;
+    justify-content: center;
   }
 
   &:hover {
@@ -131,7 +133,7 @@
   transition: all 0.5s;
 
   @include breakpoint(medium) {
-    padding: 1rem 2rem;
+    padding: 3.5rem 2rem;
     left: 45%;
     top: 40%;
   }
