--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,16 +1,31 @@
+@use "breakpoints" as *;
+
 .footer {
   padding: 10rem 3rem;
   background-color: #37383d;
+
+  @include breakpoint(small) {
+    padding: 10rem 0.5rem;
+  }
 
   &__nav {
     list-style: none;
     display: flex;
     justify-content: center;
     margin-bottom: 5rem;
+    flex-wrap: wrap;
+
+    @include breakpoint(medium) {
+      justify-content: space-evenly;
+    }
   }
 
   &__item {
     margin-right: 4rem;
+
+    @include breakpoint(medium) {
+      margin-bottom: 2rem;
+    }
   }
 
   &__link {
