--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -18,47 +18,62 @@
     width: 100%;
     padding: 0 6rem;
     z-index: 100;
-    overflow: hidden;
 
-    // @include breakpoint(medium) {
-    //   padding: 3rem 2rem;
-    // }
-
+    @include breakpoint(medium) {
+      padding: 0.5rem 1rem;
+    }
     &__button {
       cursor: pointer;
-      text-align: center;
-      position: relative;
+      &--line {
+        text-align: center;
+        position: relative;
 
-      width: 3rem;
-      height: 2px;
-      background-color: #333;
-      display: none;
-      opacity: 0;
-
-      @include breakpoint(medium) {
-        display: inline-block;
-        opacity: 1;
-      }
-
-      &::before {
-        position: absolute;
-        content: '';
-        left: 0;
         width: 3rem;
         height: 2px;
-        top: -0.8rem;
         background-color: #333;
-        display: inline-block;
+        display: none;
+        opacity: 0;
+
+        @include breakpoint(medium) {
+          display: inline-block;
+          opacity: 1;
+        }
+
+        &::before {
+          position: absolute;
+          content: '';
+          left: 0;
+          width: 3rem;
+          height: 2px;
+          top: -0.8rem;
+          background-color: #333;
+          display: inline-block;
+          transition: all 0.3s;
+        }
+        &::after {
+          position: absolute;
+          content: '';
+          left: 0;
+          width: 3rem;
+          height: 2px;
+          top: 0.8rem;
+          background-color: #333;
+          display: inline-block;
+          transition: all 0.3s;
+        }
       }
-      &::after {
-        position: absolute;
-        content: '';
-        left: 0;
-        width: 3rem;
-        height: 2px;
-        top: 0.8rem;
-        background-color: #333;
-        display: inline-block;
+      &--line--active {
+        background-color: transparent;
+
+        &::before {
+          top: 0;
+          transform: rotate(135deg);
+        }
+
+        &::after {
+          top: 0;
+          transform: rotate(-135deg);
+        }
       }
     }
 
@@ -151,4 +166,8 @@
 .sticky {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.95);
+
+  @include breakpoint(small) {
+    justify-content: space-around !important;
+  }
 }
